--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.20.13",
+    "sqlite3": "^4.1.1"
   }
 }
